--- a/OOP_XOR.ipynb
+++ b/OOP_XOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbZh6EJNNNne+/2oPXxOad",
+      "authorship_tag": "ABX9TyOtb3Bq5kGH+zO17yxEehSg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "FUwFtPVXy-Ws"
       },
-      "execution_count": 247,
+      "execution_count": 266,
       "outputs": []
     },
     {
@@ -188,16 +188,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IdxXrWYDGCw6",
-        "outputId": "3a9612a8-fc11-4eb6-8c6f-4a2cd7556dbf"
+        "outputId": "e9f29ba2-dbde-4fd5-9cff-eb97f601ca6e"
       },
-      "execution_count": 253,
+      "execution_count": 267,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best function configuration: Tanh Sigmoid ReLU\n",
-            "Best training error: 2.2340787354891936e-32\n"
+            "Best function configuration: ReLU Sigmoid Tanh\n",
+            "Best training error: 0.00011217389928996636\n"
           ]
         }
       ]
@@ -243,16 +243,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UfAJqoSs80-E",
-        "outputId": "407092b4-d535-4d30-ae82-e36d575407ce"
+        "outputId": "17cb3fbf-ce61-40eb-e27d-bc151ee3a12f"
       },
-      "execution_count": 254,
+      "execution_count": 268,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best neuron configuration: 4 5\n",
-            "Best training error: 5.789826895314128e-33\n"
+            "Best neuron configuration: 9 10\n",
+            "Best training error: 0.0001723524717167167\n"
           ]
         }
       ]
@@ -293,16 +293,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BQYsrlaOAemk",
-        "outputId": "a95b76a1-8a53-4f64-db61-016e1799e080"
+        "outputId": "d0cec981-05c3-44ab-e928-1b65bd326291"
       },
-      "execution_count": 255,
+      "execution_count": 269,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best learning rate: 0.001\n",
-            "Best training error: 0.2295512519238576\n"
+            "Best learning rate: 0.1\n",
+            "Best training error: 0.00013487474434895473\n"
           ]
         }
       ]
@@ -314,11 +314,11 @@
         "\n",
         "network = [\n",
         "    Dense(2, neurons1),\n",
-        "    Tanh(),\n",
+        "    best_first,\n",
         "    Dense(neurons1, neurons2),\n",
-        "    Tanh(),\n",
+        "    best_second,\n",
         "    Dense(neurons2, 1),\n",
-        "    Tanh()\n",
+        "    best_third\n",
         "]\n",
         "\n",
         "train(network, mse, mse_prime, X, Y, epochs=10000, learning_rate=best_lr, verbose=False)\n",
@@ -333,18 +333,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E3u-P-IdEYBY",
-        "outputId": "42751c17-d60e-4f49-9f27-2e78fc109f50"
+        "outputId": "47208c88-0701-4b5d-94f8-538670f99582"
       },
-      "execution_count": 256,
+      "execution_count": 270,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.00290109]]\n",
-            "[[0.96515455]]\n",
-            "[[0.96572018]]\n",
-            "[[0.00206009]]\n"
+            "[[2.47024485e-05]]\n",
+            "[[0.99526233]]\n",
+            "[[0.9948626]]\n",
+            "[[-2.20262484e-05]]\n"
           ]
         }
       ]
