--- a/OOP_XOR.ipynb
+++ b/OOP_XOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtb3Bq5kGH+zO17yxEehSg",
+      "authorship_tag": "ABX9TyOVdqp6+K3+NXi1cbjuSX84",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "FUwFtPVXy-Ws"
       },
-      "execution_count": 266,
+      "execution_count": 282,
       "outputs": []
     },
     {
@@ -158,7 +158,6 @@
         "\n",
         "function_configs = get_activation_combinations(activation_functions)\n",
         "\n",
-        "best_network = None\n",
         "best_error = np.inf\n",
         "best_first, best_second, best_third = None, None, None\n",
         "\n",
@@ -176,7 +175,6 @@
         "  error = evaluate_network(network, X, Y)\n",
         "\n",
         "  if error < best_error:\n",
-        "    best_network = network\n",
         "    best_error = error\n",
         "    best_first, best_second, best_third = f[0], f[1], f[2]\n",
         "\n",
@@ -188,16 +186,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IdxXrWYDGCw6",
-        "outputId": "e9f29ba2-dbde-4fd5-9cff-eb97f601ca6e"
+        "outputId": "ae10a808-9a1d-47c6-8849-738489247f9a"
       },
-      "execution_count": 267,
+      "execution_count": 283,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best function configuration: ReLU Sigmoid Tanh\n",
-            "Best training error: 0.00011217389928996636\n"
+            "Best function configuration: Tanh ReLU Sigmoid\n",
+            "Best training error: 0.0002011554207480082\n"
           ]
         }
       ]
@@ -212,7 +210,6 @@
         "\n",
         "neuron_configs = [(2, 3), (3, 4), (4, 5), (5, 6), (7, 8), (9, 10)]\n",
         "\n",
-        "best_network = None\n",
         "best_error = np.inf\n",
         "best_neurons1, best_neurons2 = None, None\n",
         "\n",
@@ -230,7 +227,6 @@
         "  error = evaluate_network(network, X, Y)\n",
         "\n",
         "  if error < best_error:\n",
-        "    best_network = network\n",
         "    best_error = error\n",
         "    best_neurons1, best_neurons2 = neurons1, neurons2\n",
         "\n",
@@ -243,16 +239,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UfAJqoSs80-E",
-        "outputId": "17cb3fbf-ce61-40eb-e27d-bc151ee3a12f"
+        "outputId": "96b87968-1a84-4c3d-db33-036d4f40e67a"
       },
-      "execution_count": 268,
+      "execution_count": 284,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Best neuron configuration: 9 10\n",
-            "Best training error: 0.0001723524717167167\n"
+            "Best training error: 0.00012149519306552905\n"
           ]
         }
       ]
@@ -293,16 +289,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BQYsrlaOAemk",
-        "outputId": "d0cec981-05c3-44ab-e928-1b65bd326291"
+        "outputId": "e1536c38-2c36-42ef-ebf9-ab97d3fa441d"
       },
-      "execution_count": 269,
+      "execution_count": 285,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Best learning rate: 0.1\n",
-            "Best training error: 0.00013487474434895473\n"
+            "Best training error: 0.00015779187426537934\n"
           ]
         }
       ]
@@ -333,18 +329,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E3u-P-IdEYBY",
-        "outputId": "47208c88-0701-4b5d-94f8-538670f99582"
+        "outputId": "e769729c-bff1-44c2-b388-57e15990c8ac"
       },
-      "execution_count": 270,
+      "execution_count": 286,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[2.47024485e-05]]\n",
-            "[[0.99526233]]\n",
-            "[[0.9948626]]\n",
-            "[[-2.20262484e-05]]\n"
+            "[[0.00287054]]\n",
+            "[[0.99745344]]\n",
+            "[[0.99600009]]\n",
+            "[[0.00339504]]\n"
           ]
         }
       ]
