--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLoDEfR3gWj82oVjaHYess",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,8 +12,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "TPU"
+    }
   },
   "cells": [
     {
@@ -29,95 +27,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OD02OQOQeRr4",
-        "outputId": "f0b18bbd-ce89-4de9-8799-7aa58b16892b"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "439742"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ],
       "source": [
-        "import requests\n",
-        "content = requests.get(\"https://raw.githubusercontent.com/amephraim/nlp/master/texts/J.%20K.%20Rowling%20-%20Harry%20Potter%201%20-%20Sorcerer's%20Stone.txt\").text\n",
-        "open(\"harry-potter.txt\", \"w\", encoding=\"utf-8\").write(content)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import sys\n",
+        "import tensorflow as tf\n",
+        "from keras.datasets import imdb\n",
         "from keras.models import Sequential\n",
-        "from keras.layers import Dense, LSTM\n",
-        "from keras.optimizers import RMSprop\n",
+        "from keras.layers import Embedding, LSTM, Dense\n",
+        "from keras.preprocessing.sequence import pad_sequences\n",
         "\n",
+        "# Загрузка данных IMDb\n",
+        "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=10000)\n",
         "\n",
-        "with open('harry-potter.txt', 'r') as data:\n",
-        "  text = data.read()\n",
+        "print(y_train[0])\n",
+        "print(y_train[1])\n",
         "\n",
-        "# Создаем словарь уникальных символов\n",
-        "chars = sorted(list(set(text)))\n",
-        "char_indices = dict((c, i) for i, c in enumerate(chars))\n",
-        "indices_char = dict((i, c) for i, c in enumerate(chars))\n",
+        "# Преобразование данных в векторы\n",
+        "max_length = max([len(x) for x in x_train])\n",
+        "x_train = pad_sequences(x_train, maxlen=max_length)\n",
+        "x_test = pad_sequences(x_test, maxlen=max_length)\n",
         "\n",
-        "# Генерируем обучающие данные и метки\n",
-        "maxlen = 40\n",
-        "step = 3\n",
-        "sentences = []\n",
-        "next_chars = []\n",
-        "for i in range(0, len(text) - maxlen, step):\n",
-        "    sentences.append(text[i: i + maxlen])\n",
-        "    next_chars.append(text[i + maxlen])\n",
-        "X = np.zeros((len(sentences), maxlen, len(chars)))\n",
-        "y = np.zeros((len(sentences), len(chars)))\n",
-        "for i, sentence in enumerate(sentences):\n",
-        "    for t, char in enumerate(sentence):\n",
-        "        X[i, t, char_indices[char]] = 1\n",
-        "    y[i, char_indices[next_chars[i]]] = 1\n",
-        "\n",
-        "\n",
-        "model = Sequential()\n",
-        "model.add(LSTM(128, input_shape=(maxlen, len(chars))))\n",
-        "model.add(Dense(len(chars), activation='softmax'))\n",
-        "\n",
-        "optimizer = RMSprop(learning_rate=0.01)\n",
-        "model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
-        "model.fit(X, y, batch_size=128, epochs=3)\n",
-        "\n",
-        "model.save('text_model.keras')"
+        "print(max_length)\n",
+        "print(x_train)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S1c0olP-eU4O",
-        "outputId": "2be62773-642b-448d-f364-90e3e55a780e"
+        "outputId": "7a9ed830-d96e-45f7-ab46-612becebd021"
       },
-      "execution_count": 2,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/3\n",
-            "1146/1146 [==============================] - 159s 137ms/step - loss: 2.0858\n",
-            "Epoch 2/3\n",
-            "1146/1146 [==============================] - 151s 132ms/step - loss: 1.6478\n",
-            "Epoch 3/3\n",
-            "1146/1146 [==============================] - 156s 136ms/step - loss: 1.5326\n"
+            "1\n",
+            "0\n",
+            "2494\n",
+            "[[   0    0    0 ...   19  178   32]\n",
+            " [   0    0    0 ...   16  145   95]\n",
+            " [   0    0    0 ...    7  129  113]\n",
+            " ...\n",
+            " [   0    0    0 ...    4 3586    2]\n",
+            " [   0    0    0 ...   12    9   23]\n",
+            " [   0    0    0 ...  204  131    9]]\n"
           ]
         }
       ]
@@ -125,71 +78,194 @@
     {
       "cell_type": "code",
       "source": [
-        "model = Sequential()\n",
-        "model.add(LSTM(128, input_shape=(maxlen, len(chars))))\n",
-        "model.add(Dense(len(chars), activation='softmax'))\n",
-        "\n",
-        "model.load_weights('text_model.keras')\n",
-        "\n",
-        "# Генерируем текст с помощью обученной модели\n",
-        "start_index = np.random.randint(0, len(text) - maxlen - 1)\n",
-        "generated_text = text[start_index: start_index + maxlen]\n",
-        "for temperature in [0.2, 0.5, 1.0, 1.2]:\n",
-        "    print('----- temperature:', temperature)\n",
-        "    sys.stdout.write(generated_text)\n",
-        "    for i in range(100):\n",
-        "        sampled = np.zeros((1, maxlen, len(chars)))\n",
-        "        for t, char in enumerate(generated_text):\n",
-        "            sampled[0, t, char_indices[char]] = 1.\n",
-        "        preds = model.predict(sampled, verbose=0)[0]\n",
-        "        next_index = np.random.choice(len(chars), p=preds)\n",
-        "        next_char = indices_char[next_index]\n",
-        "        generated_text += next_char\n",
-        "        generated_text = generated_text[1:]\n",
-        "        sys.stdout.write(next_char)\n",
-        "        sys.stdout.flush()\n",
-        "    print()"
+        "num_chars = 10000  # Количество уникальных слов\n",
+        "embedding_dim = 64  # Размерность встраивания\n",
+        "lstm_units = 128  # Количество единиц LSTM"
       ],
       "metadata": {
+        "id": "w0pthNK09MJs"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = Sequential()\n",
+        "model.add(Embedding(num_chars, embedding_dim, input_length=max_length))\n",
+        "model.add(LSTM(lstm_units))\n",
+        "model.add(Dense(1, activation='sigmoid'))  # Бинарная классификация (положительный/отрицательный отзыв)"
+      ],
+      "metadata": {
+        "id": "MhNp2ecX9O9B"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "id": "Qd6R6p069cnh"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(x_train, y_train, epochs=1, validation_split=0.2)"
+      ],
+      "metadata": {
+        "id": "OpcV1vzE9hya",
+        "outputId": "6c9cf5bc-69af-4a4e-8ac5-f38b043a2bef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "fnTaQljdecNL",
-        "outputId": "5d289c29-acb6-46dc-a15d-d9d36828e494"
+        }
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "----- temperature: 0.2\n",
-            " few things we wanted to ask you, as a marbly by invicomers the opbootts. ' See, on the might\n",
-            " HoSw?\"\n",
-            "\n",
-            "\"Krestrilind himself To\n",
-            "persest conce\n",
-            "----- temperature: 0.5\n",
-            "\"\n",
-            "\n",
-            "\"Krestrilind himself To\n",
-            "persest concected and\n",
-            "Derie it Hagord. Harry -- and bless,  none of Hogwarts. Re, in something burs of -- yeact t\n",
-            "----- temperature: 1.0\n",
-            "rts. Re, in something burs of -- yeact then everyound him. An\n",
-            "this wing. saCk.\n",
-            "\n",
-            "\"I know I coure of, Harry's can andrestod on the\n",
-            "gilnon\n",
-            "Lo\n",
-            "g\n",
-            "----- temperature: 1.2\n",
-            "Harry's can andrestod on the\n",
-            "gilnon\n",
-            "Lo\n",
-            "go?\"\n",
-            "\n",
-            "\"Fentwees and Fred hheck back herrectica, -- his liss areiaser to go an warcherly be outside on\n"
+            "625/625 [==============================] - 2359s 4s/step - loss: 0.4471 - accuracy: 0.7875 - val_loss: 0.3595 - val_accuracy: 0.8500\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7f710b6ef9d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save('model.keras')"
+      ],
+      "metadata": {
+        "id": "wcs3FFmE9qDk"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss, accuracy = model.evaluate(x_test, y_test)\n",
+        "print('Тестовая точность:', accuracy)"
+      ],
+      "metadata": {
+        "id": "oFbCumWL9tGC",
+        "outputId": "91836254-2522-4516-8d00-f73a85c28561",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "782/782 [==============================] - 840s 1s/step - loss: 0.3634 - accuracy: 0.8446\n",
+            "Тестовая точность: 0.8445600271224976\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "def preprocess_text(text):\n",
+        "\n",
+        "    # Удаление знаков препинания\n",
+        "    text = re.sub(r'[^\\w\\s]', '', text)\n",
+        "\n",
+        "    # Удаление переходов на новую строку\n",
+        "    text = text.replace('\\n', ' ')\n",
+        "\n",
+        "    # Преобразование в строчные буквы\n",
+        "    text = text.lower()\n",
+        "    return text\n",
+        ""
+      ],
+      "metadata": {
+        "id": "6CVloz_wbQtf"
+      },
+      "execution_count": 114,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = \"\"\"After each occasion when I saw it, I define it as masterpiece. sure, many explanations. but something is real impressive - the plot. the science to explore each emotion, expectation, thrill, characters and end. the performances are more than beautiful. the atmosphere - you feel it . the tension - great good point - it is a film about yourself. about fears, appearances. and that does it a magnificent film. and more. a remarkable masterpiece.\n",
+        "\"\"\"\n",
+        "\n",
+        "new_text = preprocess_text(text)"
+      ],
+      "metadata": {
+        "id": "D3oLiXXRbUNj"
+      },
+      "execution_count": 112,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "def predict(review):\n",
+        "    word_index = imdb.get_word_index()\n",
+        "\n",
+        "    list_index = [[word_index[word] for word in review.split()]]\n",
+        "\n",
+        "    # Преобразовать отзыв в вектор\n",
+        "    new_review_vec = pad_sequences(list_index , maxlen=max_length)\n",
+        "\n",
+        "    # Сделать прогноз\n",
+        "    prediction = model.predict(new_review_vec)\n",
+        "\n",
+        "    print(prediction)\n",
+        "\n",
+        "predict(new_text)\n",
+        "\n",
+        "x1 = [x_train[0]]\n",
+        "print(model.predict(np.array(x1)))\n",
+        "\n",
+        "x2 = [x_train[1]]\n",
+        "print(model.predict(np.array(x2)))"
+      ],
+      "metadata": {
+        "id": "S6QN9bTs91sJ",
+        "outputId": "253a52b9-3231-4fa3-f3b4-8fb9fcb64597",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 1s 524ms/step\n",
+            "[[0.23834185]]\n",
+            "1/1 [==============================] - 1s 602ms/step\n",
+            "[[0.9568325]]\n",
+            "1/1 [==============================] - 1s 640ms/step\n",
+            "[[0.0391906]]\n"
           ]
         }
       ]
