--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -53,14 +53,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S1c0olP-eU4O",
-        "outputId": "7a9ed830-d96e-45f7-ab46-612becebd021"
+        "outputId": "0af44e97-42a7-4e53-a19e-7ef1e595fc9e"
       },
-      "execution_count": 131,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
+            "17464789/17464789 [==============================] - 0s 0us/step\n",
             "1\n",
             "0\n",
             "2494\n",
@@ -85,7 +87,7 @@
       "metadata": {
         "id": "w0pthNK09MJs"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -99,7 +101,7 @@
       "metadata": {
         "id": "MhNp2ecX9O9B"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -110,39 +112,44 @@
       "metadata": {
         "id": "Qd6R6p069cnh"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model.fit(x_train, y_train, epochs=1, validation_split=0.2)"
+        "model.fit(x_train, y_train, epochs=3, validation_split=0.2)"
       ],
       "metadata": {
         "id": "OpcV1vzE9hya",
-        "outputId": "6c9cf5bc-69af-4a4e-8ac5-f38b043a2bef",
+        "outputId": "7353a98f-4c9c-47f3-c920-b5709dde4656",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "625/625 [==============================] - 2359s 4s/step - loss: 0.4471 - accuracy: 0.7875 - val_loss: 0.3595 - val_accuracy: 0.8500\n"
+            "Epoch 1/3\n",
+            "625/625 [==============================] - 2735s 4s/step - loss: 0.4643 - accuracy: 0.7846 - val_loss: 0.4582 - val_accuracy: 0.7964\n",
+            "Epoch 2/3\n",
+            "625/625 [==============================] - 2755s 4s/step - loss: 0.3322 - accuracy: 0.8638 - val_loss: 0.3806 - val_accuracy: 0.8398\n",
+            "Epoch 3/3\n",
+            "625/625 [==============================] - 2767s 4s/step - loss: 0.2561 - accuracy: 0.9021 - val_loss: 0.4171 - val_accuracy: 0.8252\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7f710b6ef9d0>"
+              "<keras.src.callbacks.History at 0x798c3e4fbcd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -154,7 +161,7 @@
       "metadata": {
         "id": "wcs3FFmE9qDk"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -165,19 +172,19 @@
       ],
       "metadata": {
         "id": "oFbCumWL9tGC",
-        "outputId": "91836254-2522-4516-8d00-f73a85c28561",
+        "outputId": "7ee781e2-82b7-428c-eda3-aaa1f41c9d0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "782/782 [==============================] - 840s 1s/step - loss: 0.3634 - accuracy: 0.8446\n",
-            "Тестовая точность: 0.8445600271224976\n"
+            "782/782 [==============================] - 993s 1s/step - loss: 0.4273 - accuracy: 0.8208\n",
+            "Тестовая точность: 0.8208400011062622\n"
           ]
         }
       ]
@@ -197,13 +204,12 @@
         "\n",
         "    # Преобразование в строчные буквы\n",
         "    text = text.lower()\n",
-        "    return text\n",
-        ""
+        "    return text\n"
       ],
       "metadata": {
         "id": "6CVloz_wbQtf"
       },
-      "execution_count": 114,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -217,7 +223,7 @@
       "metadata": {
         "id": "D3oLiXXRbUNj"
       },
-      "execution_count": 112,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -249,23 +255,25 @@
       ],
       "metadata": {
         "id": "S6QN9bTs91sJ",
-        "outputId": "253a52b9-3231-4fa3-f3b4-8fb9fcb64597",
+        "outputId": "97177926-eee7-48fa-b87f-6d273e5375d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 130,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 1s 524ms/step\n",
-            "[[0.23834185]]\n",
-            "1/1 [==============================] - 1s 602ms/step\n",
-            "[[0.9568325]]\n",
-            "1/1 [==============================] - 1s 640ms/step\n",
-            "[[0.0391906]]\n"
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb_word_index.json\n",
+            "1641221/1641221 [==============================] - 0s 0us/step\n",
+            "1/1 [==============================] - 1s 1s/step\n",
+            "[[0.14378855]]\n",
+            "1/1 [==============================] - 1s 579ms/step\n",
+            "[[0.74895376]]\n",
+            "1/1 [==============================] - 0s 325ms/step\n",
+            "[[0.02456886]]\n"
           ]
         }
       ]
