--- a/GCD.ipynb
+++ b/GCD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBh71niPq10p4NY/hX2owP",
+      "authorship_tag": "ABX9TyMQy7Bo4drKtfOkNOSxcT2u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,18 @@
       "source": [
         "!pip install -q -U google-generativeai"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Google AI Studio (Start a new project in Google Cloud)\n",
+        "# VPN"
+      ],
+      "metadata": {
+        "id": "zPUIq5jzaPxF"
+      },
+      "execution_count": 29,
+      "outputs": []
     },
     {
       "cell_type": "code",
