--- a/ai_chat.ipynb
+++ b/ai_chat.ipynb
@@ -123,7 +123,7 @@
       "source": [
         "model = genai.GenerativeModel('gemini-1.5-flash')\n",
         "\n",
-        "prompt = 'descripe a picture'\n",
+        "prompt = 'describe a picture'\n",
         "\n",
         "response = model.generate_content([prompt, img], stream=False)\n",
         "response.resolve()\n",
@@ -137,11 +137,11 @@
         "chat"
       ],
       "metadata": {
-        "id": "e2V84yhGqufZ",
-        "outputId": "00df9f47-6b8f-4e67-cff4-18ea18f961dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e2V84yhGqufZ",
+        "outputId": "00df9f47-6b8f-4e67-cff4-18ea18f961dc"
       },
       "execution_count": 10,
       "outputs": [
@@ -173,12 +173,12 @@
         "print(response.text)"
       ],
       "metadata": {
-        "id": "vVihVQw5q3F-",
-        "outputId": "8880a5e8-04d3-40d3-9f03-c53d86da0aa6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "id": "vVihVQw5q3F-",
+        "outputId": "8880a5e8-04d3-40d3-9f03-c53d86da0aa6"
       },
       "execution_count": 23,
       "outputs": [
@@ -254,12 +254,12 @@
         "print(response.text)"
       ],
       "metadata": {
-        "id": "KXmPeRs1rkWu",
-        "outputId": "9442bde5-351b-4fc8-cb7e-6ed30fd5a244",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 106
-        }
+        },
+        "id": "KXmPeRs1rkWu",
+        "outputId": "9442bde5-351b-4fc8-cb7e-6ed30fd5a244"
       },
       "execution_count": 24,
       "outputs": [
@@ -282,12 +282,12 @@
         "print(response.text)"
       ],
       "metadata": {
-        "id": "JTUwiuEysc5k",
-        "outputId": "9620f533-6b13-4848-c2df-683cab80a2f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "id": "JTUwiuEysc5k",
+        "outputId": "9620f533-6b13-4848-c2df-683cab80a2f2"
       },
       "execution_count": 25,
       "outputs": [
@@ -307,11 +307,11 @@
         "print(chat.history)"
       ],
       "metadata": {
-        "id": "Ur0H1pKbq-rK",
-        "outputId": "c1b6d4ba-c2a0-4d06-9ae8-db29458204fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ur0H1pKbq-rK",
+        "outputId": "c1b6d4ba-c2a0-4d06-9ae8-db29458204fd"
       },
       "execution_count": 26,
       "outputs": [
@@ -358,12 +358,102 @@
       },
       "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "def extract_ints(text):\n",
+        "  \"\"\"Извлекает целые числа из строки, сохраняя целостность чисел.\n",
+        "\n",
+        "  Args:\n",
+        "    text: Строка, из которой необходимо извлечь числа.\n",
+        "\n",
+        "  Returns:\n",
+        "    Список целых чисел.\n",
+        "  \"\"\"\n",
+        "  numbers = re.findall(r'\\d+', text)\n",
+        "  return [int(num) for num in numbers]\n",
+        "\n",
+        "# Пример использования\n",
+        "text = \"Привет 123 мир 456!\"\n",
+        "extracted_numbers = extract_ints(text)\n",
+        "print(extracted_numbers)  # Выведет: [123, 456]\n"
+      ],
+      "metadata": {
+        "id": "AjnIXW6XyONn",
+        "outputId": "42cd1688-5278-42b0-b80f-75a80083f85c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[123, 456]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "for i in range(0, 20):\n",
+        "    response = model.generate_content(f\"write the result {i} * {i} without comments\")\n",
+        "    # print(response.text)\n",
+        "    extracted_numbers = extract_ints(response.text)\n",
+        "    print(extracted_numbers)"
+      ],
+      "metadata": {
+        "id": "aDFKZNn6vTnk",
+        "outputId": "201f67cc-424f-462e-eb05-f2c6c0a0b27b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 399
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0]\n",
+            "[1]\n",
+            "[4]\n",
+            "[9]\n",
+            "[16]\n",
+            "[25]\n",
+            "[36]\n",
+            "[49]\n",
+            "[64]\n",
+            "[81]\n",
+            "[100]\n",
+            "[121]\n",
+            "[144]\n",
+            "[169]\n",
+            "[196]\n",
+            "[225]\n",
+            "[256]\n",
+            "[289]\n",
+            "[324]\n",
+            "[361]\n",
+            "CPU times: user 535 ms, sys: 59.1 ms, total: 594 ms\n",
+            "Wall time: 24 s\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOT8g6J/fjlcwIC3g3Z4qj",
+      "authorship_tag": "ABX9TyMZq46EeajArEG/K+tVWNJ8",
       "include_colab_link": true
     },
     "kernelspec": {
