--- a/ai_items.ipynb
+++ b/ai_items.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuXO/NpllVGNEczxGNSTL5",
+      "authorship_tag": "ABX9TyNxlgMS/RrOlXZm+sBpqvgg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -172,41 +172,52 @@
       "metadata": {
         "id": "4OG67XO07ws-"
       },
-      "execution_count": 99,
+      "execution_count": 102,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "send_data(f'Привет, давай сыграем в игру. Это первый список товаров, которые производит компания в формате json: {list_items}. Это второй список разных товаров в формате json: {list_all_items}. Из второго списка разных товаров возьми словарь с товаром, который точно подходит к по теме к первому списку товаров. Укажи индекс данного товара во втором списке.')"
+        "send_data(f'Привет, давай сыграем в игру. Это первый список товаров, которые производит компания в формате json: {list_items}. Это второй список разных товаров в формате json: {list_all_items}. Из второго списка разных товаров возьми словарь с товаром, который точно подходит по теме к первому списку товаров. Укажи индекс данного товара во втором списке.')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "s7MjuUX4CWhY",
-        "outputId": "0d0b3065-4028-4e90-8a3c-e57b92ba661f"
+        "outputId": "86d06b67-989a-413f-cb88-240f57c37a3e"
       },
-      "execution_count": 100,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Товар из второго списка, который **точно подходит** к теме первого списка товаров:\n",
+            "Товар, который точно подходит по теме к первому списку товаров:\n",
             "\n",
-            "**Индекс:** 9\n",
+            "Индекс: 9\n",
             "\n",
-            "**Описание товара:**\n",
+            "Данные о товаре:\n",
             "\n",
-            "Комплектная трансформаторная подстанция сельского типа КТП 63кВа-10(6)/0,4 кВ\n",
+            "```json\n",
+            "{\n",
+            "\"index\": 9,\n",
+            "\"data\": {\n",
+            "1,\n",
+            "\"мощность 63 кВА, с масляным трансформатором\",\n",
+            "\"Подстанция трансформаторная комплектная\",\n",
+            "\"556867100, Павлодарская область, Щербактинский район,\\nс.Шалдай ул.Ленина 60\",\n",
+            "\"№ 60785954-ЗЦП2\",\n",
+            "\"Комплектная трансформаторная подстанция сельского типа\\nКТП 63кВа-10(6)/0,4 кВ\",\n",
+            "nan,\n",
+            "\"В течении 20 дней с момента подписания договора\",\n",
+            "\"Приобретение трансформаторной подстанции\",\n",
+            "\"Штука\"\n",
+            "}\n",
+            "}\n",
+            "```\n",
             "\n",
-            "**Характеристики:**\n",
-            "\n",
-            "* мощность 63 кВА\n",
-            "* с масляным трансформатором\n",
-            "\n",
-            "Этот товар соответствует теме первого списка, который включает в себя различные виды трансформаторных подстанций. \n",
+            "Этот товар соответствует первому списку товаров, поскольку он также является трансформаторной подстанцией. \n",
             "\n"
           ]
         }
@@ -220,7 +231,7 @@
       "metadata": {
         "id": "pPPYRbnlErKc"
       },
-      "execution_count": 98,
+      "execution_count": 101,
       "outputs": []
     }
   ]
